Fixed missing colors from table

--- a/app/assets/stylesheets/foundation/patient_medications.css.scss
+++ b/app/assets/stylesheets/foundation/patient_medications.css.scss
@@ -1,12 +1,12 @@
-.accordion dd > a.drug-drug, li.drug-drug {
+.accordion dd > a.drug-drug, li.drug-drug, tbody tr.drug-drug {
   background: #CCFFCC;
 }
 
-.accordion dd > a.drug-esa, li.drug-esa {
+.accordion dd > a.drug-esa, li.drug-esa, tbody tr.drug-esa{
   background: #FFFF99;
 }
 
-.accordion dd > a.drug-immunosuppressant, li.drug-immunosuppressant {
+.accordion dd > a.drug-immunosuppressant, li.drug-immunosuppressant, tbody tr.drug-immunosuppressant {
   background: #CCFFFF;
 }
 
